Added calculation of remaining months every time info mes is called + modified docker compose file with a pull always behaviour

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   
   provider-bot:
-    image: noahnbinary/provider-bot:trixie
+    image: noahnbinary/provider-bot:latest
+    pull_policy: always
     container_name: provider-bot
     restart: always
     env_file:
